RESOLVED FIXED12344
NativeListBox: item hit testing does not account for top padding and border
https://bugs.webkit.org/show_bug.cgi?id=12344
Summary NativeListBox: item hit testing does not account for top padding and border
mitz
Reported 2007-01-20 05:08:34 PST
RenderListBox::listIndexAtOffset() does not take top padding and border. To see the problem, open the URL and try to select items.
Attachments
[WIP] Patch w/o change log and test (2.76 KB, patch)
2007-01-22 11:02 PST, mitz
no flags
Another test case (729 bytes, text/html)
2007-01-22 11:04 PST, mitz
no flags
Patch, including test and change log (54.64 KB, patch)
2007-01-22 14:52 PST, mitz
darin: review+
mitz
Comment 1 2007-01-22 11:02:24 PST
Created attachment 12608 [details] [WIP] Patch w/o change log and test
mitz
Comment 2 2007-01-22 11:04:44 PST
Created attachment 12609 [details] Another test case This test case lets you play with autoscroll and with clicking below the last item.
David Kilzer (:ddkilzer)
Comment 3 2007-01-22 11:25:44 PST
Comment on attachment 12608 [details] [WIP] Patch w/o change log and test >+ return newOffset < numItems() ? newOffset : - 1; Space between unary minus and one.
mitz
Comment 4 2007-01-22 14:52:17 PST
Created attachment 12615 [details] Patch, including test and change log
Darin Adler
Comment 5 2007-01-22 16:33:28 PST
Comment on attachment 12615 [details] Patch, including test and change log Oh, my bad! Mitz told me about this and asked me to fix it in my patch! This patch is full of maximum goodness. r=me
Sam Weinig
Comment 6 2007-01-22 17:54:53 PST
Landed in r19037.
Note You need to log in before you can comment on or make changes to this bug.